[package]
name = "histogram"
version = "0.6.7-pre"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT/Apache-2.0"

description = "histogram storage and percentile metrics with precision guarentees"

homepage = "https://github.com/brayniac/histogram"
documentation = "https://docs.rs/histogram"
repository = "https://github.com/brayniac/histogram"

readme = "README.md"

keywords = [ "histogram", "percentile", "statistics", "stats" ]

categories = [ "data-structures" ]

[features]
default = ["bin"]

# This feature provides the `histogram` binary, which reads data from stdin, and
# then prints a histogram of it to stdout.
bin = []

[[bin]]
name = "histogram"
required-features = ["bin"]
